[package]
name = "ark-groth16"
version = "0.3.0"
authors = [ "arkworks contributors" ]
description = "An implementation of the Groth 2016 zkSNARK proof system"
homepage = "https://arkworks.rs"
repository = "https://github.com/arkworks-rs/groth16"
documentation = "https://docs.rs/ark-groth16/"
keywords = [ "zero-knowledge", "cryptography", "zkSNARK", "SNARK", "Groth-Maller" ]
categories = [ "cryptography" ]
include = ["Cargo.toml", "src", "README.md", "LICENSE-APACHE", "LICENSE-MIT"]
license = "MIT/Apache-2.0"
edition = "2018"

################################# Dependencies ################################

[dependencies]
ark-ff = {git = "https://github.com/SRI-CSL/algebra", branch = "v3_sri", default-features=false, features=["asm","parallel"] }
ark-ec = {git = "https://github.com/SRI-CSL/algebra", branch = "v3_sri", default-features=false }
ark-serialize = {git = "https://github.com/SRI-CSL/algebra", branch = "v3_sri",  default-features=false , features = ["derive"] } 

ark-poly = {git = "https://github.com/SRI-CSL/algebra", branch = "v3_sri", default-features=false }
ark-std = {version = "0.2.1-alpha.0", git = "https://github.com/SRI-CSL/utils", default-features = false}
ark-relations = {git = "https://github.com/SRI-CSL/snark", branch = "v3_sri", default-features=false }
ark-crypto-primitives = {git = "https://github.com/SRI-CSL/crypto-primitives", branch = "new", default-features=false }
ark-r1cs-std = {git = "https://github.com/SRI-CSL/r1cs-std", branch = "v3_sri",  default-features=false, optional = true } 

mpc-algebra = {  git= "https://github.com/SRI-CSL/mpc-algebra" }
mpc-trait = { path = "https://github.com/SRI-CSL/mpc-trait" }

tracing = { version = "0.1", default-features = false, features = [ "attributes" ], optional = true }
derivative = { version = "2.0", features = ["use_core"], optional = true}

rayon = { version = "1", optional = true }
log = { version = "0.4" }
[dev-dependencies]
csv = { version = "1" }
ark-ed-on-bls12-381 =  { git = "https://github.com/SRI-CSL/curves", default-features = false, features = [ "r1cs" ], branch = "v3_sri" }
ark-bls12-377 = { git = "https://github.com/SRI-CSL/curves", default-features = false, features = [ "r1cs" ], branch = "v3_sri" }

ark-cp6-782 = { git = "https://github.com/SRI-CSL/curves", default-features = false, branch = "v3_sri" }

ark-mnt4-298 = { git = "https://github.com/SRI-CSL/curves", default-features = false, features = [ "r1cs" ], branch = "v3_sri" }
ark-mnt6-298 = { git = "https://github.com/SRI-CSL/curves", default-features = false, features = [ "r1cs" ], branch = "v3_sri" }

ark-mnt4-753 = { git = "https://github.com/SRI-CSL/curves", default-features = false, features = [ "r1cs" ], branch = "v3_sri" }
ark-mnt6-753 =  { git = "https://github.com/SRI-CSL/curves", default-features = false, features = [ "r1cs" ], branch = "v3_sri" }


[profile.release]
opt-level = 3
panic = 'abort'

[profile.dev]
opt-level = 0
panic = 'abort'

[features]
default = ["parallel"]
std = ["ark-ff/std", "ark-ec/std", "ark-poly/std", "ark-relations/std", "ark-crypto-primitives/std", "ark-std/std" ]
parallel = ["std", "ark-ff/parallel", "ark-poly/parallel", "ark-ec/parallel", "ark-crypto-primitives/parallel", "ark-std/parallel", "rayon"]
r1cs = [ "ark-crypto-primitives/r1cs", "ark-r1cs-std", "tracing", "derivative" ]
print-trace = [ "ark-std/print-trace" ]

[[example]]
name = "groth16"
path = "examples/snark-scalability/groth16.rs"
required-features = ["std"]

[[bench]]
name = "groth16-benches"
path = "benches/bench.rs"
harness = false
required-features = ["std"]

# [[example]]
# name = "groth16-recursive"
# path = "examples/recursive-snark/groth16.rs"
# required-features = ["std"]
